<resources>
    <string name="app_name">tugasvikriafanda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_Developer">Developer</string>
    <string name="username">Username</string>
    <string name="passowrd">Passowrd</string>
    <string name="password">password</string>
    <string name="create_a_newacc">Create a NewAcc</string>
    <string name="silahkan_login_untuk_masuk">silahkan login untuk masuk</string>
    <string name="silahkanlogin_untuk_masuk">Silahkan login untuk masuk</string>
    <string name="sign_in">Sign In</string>
    <string name="todo">TODO</string>
</resources>