<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tugasvikriafanda.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <action
        android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
        app:destination="@+id/home_second">

    </action>

    <fragment
        android:id="@+id/home_second"
        android:name="com.example.tugasvikriafanda.ui.home.HomeSecondFragment"
        android:label="Home Second"
        tools:layout="@layout/fragment_home_second"/>

        <action
            android:id="@+id/action_HomeSecondFragment_toHomeFragment"
            app:destination="@+id/home_second"/>

        <argument
            android:name="myArg"
            app:argType="string"/>


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.tugasvikriafanda.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.tugasvikriafanda.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_developer"
        android:name="com.example.tugasvikriafanda.ui.developer.DeveloperFragment"
        android:label="@string/menu_Developer"
        tools:layout="@layout/fragment_developer" />
</navigation>